--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -3,12 +3,13 @@
     <string name="about_author">Autor:</string>
     <string name="about_blizzard">Blizárd</string>
     <string name="about_cloudy">Zamračené</string>
-    <string name="about_cloudy_night">Zamračená noc</string>
     <string name="about_dust">Prach</string>
     <string name="about_fog">Hmla</string>
     <string name="about_for_translators">Pre prekladateľov:</string>
     <string name="about_for_translators_text">Ak chcete pomôcť s prekladom tejto aplikácie do Vášho jazyka, nájdete naše github repo po stlačení ikony Githubu.</string>              
     <string name="about_hailstone">Krúpy</string>
+    <string name="about_haze">Hmla</string>
+    <string name="about_heavy_rain">Prietrž</string>
     <string name="about_heavy_snow">Ťažký sneh</string> 
     <string name="about_light_rain">Mrholenie</string>
     <string name="about_light_snow">Jemný sneh</string>
@@ -23,9 +24,11 @@
     <string name="about_sunny_night">Jasná noc</string>
     <string name="about_t_storms">Búrky</string>
     <string name="about_version">Verzia:</string>
-    <string name="animation_preview">Náhľad animácií</string>
+    <string name="action_bar_selected_format">Vybraných: %d</string>
     <string name="app_name">Počasie</string>
+    <string name="applying_theme">Nastavovanie témy\u2026</string>
     <string name="btn_add_location">Pridať</string>
+    <string name="btn_apply_theme">Použiť</string>
     <string name="btn_delete_location">Vymazať</string>
     <string name="cancel">Zrušiť</string>
     <string name="changelog">Zoznam zmien</string>
@@ -35,19 +38,10 @@
     <string name="clear_miui_data_dialog_text">Databáza MIUI počasia bola vyčistená!</string>
     <string name="clear_miui_data_summary">Vyčistí databázu MIUI počasia</string>
     <string name="close">Zatvoriť</string>
-    <string name="conf_add_widget">Pridať Widget</string>
-    <string name="conf_choose_skin">Nastaviť vzhľad</string>
-    <string name="conf_dark_skin">Tmavý vzhľad</string>
-    <string name="conf_light_skin">Svetlý vzhľad</string>
-    <string name="conf_name">Nastavenia Widgetu</string>
-    <string name="conf_no_background">Bez pozadia</string>
     <string name="date_format_dmy">dd/MM/yyyy</string>
     <string name="date_format_mdy">MM/dd/yyyy</string>
     <string name="date_format_title">Formát dátumu</string>
     <string name="dialog_color_picker">Výber farby</string>
-    <string name="dlg_go_to_forecast">Ísť na predpoveď</string>
-    <string name="dlg_select_action">Zvoľte akciu</string>
-    <string name="dlg_set_as_home">Nastaviť ako \"Domáce mesto\"</string>
     <string name="donate">Príspevok</string>
     <string name="donations_button_close">Zatvoriť</string>
     <string name="donations_description">"Je pre Vás táto aplikácia užitočná? Podporte nás malým príspevkom!"</string>
@@ -56,17 +50,15 @@
     <string name="donations_google_android_market">Obchod Google Play</string>
     <string name="donations_google_android_market_description">Google si vezme 30 % z každého príspevku!</string>
     <string name="donations_google_android_market_donate_button">Prispieť!</string>
-    <string name="donations_google_android_market_not_supported">In-App príspevky nie sú podporované. Je Google Play nainštalovaný správne?</string>
+    <string name="donations_google_android_market_not_supported">In-App príspevky nie sú podporované. Je Google Play nainštalovaný správne?</string> 
     <string name="donations_google_android_market_not_supported_title">In-App príspevky nie sú podporované</string>
     <string name="donations_google_android_market_text">Koľko?</string> 
     <string name="donations_paypal">PayPal</string>
-    <string name="donations_paypal_description">Môžete si zvoliť výšku príspevku!</string> 
+    <string name="donations_paypal_description">Môžete si zvoliť výšku príspevku!</string>
     <string name="donations_paypal_item_name">InApp Príspevok</string>
     <string name="donations_thanks_dialog">"Ďakujeme za príspevok! Sme Vám naozaj vďační!"</string>
     <string name="donations_thanks_dialog_title">Ďakujeme!</string>
     <string name="donations_yandex">Yandex.Money</string>
-    <string name="download_video">Stiahnuť video</string>
-    <string name="end_time_title">Koniec</string>
     <string name="fetching_location">Získavanie Vašej polohy...</string>
     <string name="foreca_clear">Jasno</string>
     <string name="foreca_cloudy">Oblačno</string>
@@ -116,19 +108,21 @@
     <string name="foreca_partly_cloudy_wet_snow">Mokrý sneh</string>
     <string name="foreca_partly_cloudy_wet_snow_showers">Prehánky s mokrým snehom</string>
     <string name="just_now">Práve teraz</string>
-    <string name="loading">Načítavanie...</string>
+    <string name="loading">Načítavanie...</string>	
     <string name="location_edit">Vložte názov Mesta</string>
-    <string name="location_gps">Súčasná poloha</string>	
+    <string name="location_gps">Súčasná poloha</string>
     <string name="location_list">Mestá</string>
     <string name="location_search">Vyhľadať Mesto</string>
-    <string name="main_screen_text_color_summary">Farba textu na hlavnej obrazovke</string>
+    <string name="main_screen_text_color_summary">Farba textu na hlavnej obrazovke</string>	
     <string name="menu">Menu</string>
-    <string name="menu_hourly">Hodinová</string>	
-    <string name="menu_indices">Životný štýl</string>
+    <string name="menu_delete_theme">Vymazať tému</string>
+    <string name="menu_hourly">Hodinová</string>
+    <string name="menu_import">Importovať z SD karty</string>
     <string name="menu_locations">Mestá</string>
     <string name="menu_moon_phases">Fázy mesiaca</string>
     <string name="menu_settings">Nastavenia</string>
-    <string name="menu_trend">Vývoj</string>	
+    <string name="menu_themes">Témy</string>
+    <string name="menu_trend">Vývoj</string>
     <string name="menu_update">Aktualizovať</string>
     <string name="moon_age">Vek: %s dní</string>
     <string name="moon_current_view">%s</string>
@@ -138,15 +132,18 @@
     <string name="moon_lastquarter">Posledná Štvrť</string>
     <string name="moon_newmoon">Nov</string>
     <string name="moon_since">Od</string>
-    <string name="moon_waningcrescent">Ubúdajúci polmesiac</string>
+    <string name="moon_waningcrescent">Ubúdajúci polmesiac</string> 
     <string name="moon_waninggibbous">Ubúdajúci mesiac</string>
-    <string name="moon_waxingcrescent">Pribúdajúci polmesiac</string>
-    <string name="moon_waxinggibbous">Pribúdajúci mesiac</string>
+    <string name="moon_waxingcrescent">Pribúdajúci polmesiac</string> 
+    <string name="moon_waxinggibbous">Pribúdajúci mesiac</string> 
     <string name="network_error">Nie je možné sa pripojiť na server</string>
-    <string name="new_version">Nová verzia</string> 
+    <string name="network_in_quiet_hours">Počas času ticha sú aktualizácie pozastavené.</string>
+    <string name="network_in_roaming">Počas roamingu sú aktualizácie pozastavené.</string>
+    <string name="network_wifi_only">Aktualizovať len na Wi-Fi.</string>
+    <string name="new_version">Nová verzia</string>
     <string name="no_provider">"Poloha je nedostupná. Zvoľte mesto manuálne"</string>
-    <string name="no_weather_provider">Žiaden zdroj predpovede</string> 
-    <string name="not_now">Neskôr</string> 
+    <string name="no_weather_provider">Žiaden zdroj predpovede</string>
+    <string name="not_now">Neskôr</string>
     <string name="ok">OK</string>
     <string name="press_color_to_apply">Zvoľte farbu</string>
     <string name="pressure_units">Jednotka tlaku</string>
@@ -157,13 +154,7 @@
     <string name="quiet_hours_enabled_on">Čas ticha povolený</string>
     <string name="quiet_hours_title">Čas ticha</string>
     <string name="save_screen_shot_failed">Ukladanie screenshotu zlyhalo</string>
-    <string name="settings_about_summary">Informácie o aplikácií</string>
     <string name="settings_about_title">O aplikácií</string>
-    <string name="settings_animation_download_summary">Stiahnuť video animácie pre aktuálnu predpoveď počasia (ak sa nenašlo v telefóne)</string>
-    <string name="settings_animation_download_title">Stiahnuť animácie</string>
-    <string name="settings_animation_show_summary">Zobraziť animáciu počasia pre aktuálne podmienky</string>
-    <string name="settings_animation_show_title">Zobraziť animáciu</string>
-    <string name="settings_animation_type">Typ animácií</string>
     <string name="settings_category_animation">Nastavenie animácií</string>
     <string name="settings_category_animation_sum">Nastavenia animácií počasia a sťahovania dát</string>
     <string name="settings_category_app_update">Aktualizácia aplikácie</string>
@@ -181,9 +172,10 @@
     <string name="settings_category_widgets_sum">Prispôsobenie widgetu a akcia dotyku</string>
     <string name="settings_check_updates_summary">Kontrolovať aktualizácie pri spustení</string>
     <string name="settings_check_updates_title">Kontrola aktualizácií</string>
+    <string name="settings_citydb_provider">Databáza miest</string>
     <string name="settings_click_actions">Akcia kliknutia</string>
-    <string name="settings_hide_bottom_bar_title">Skryť spodnú lištu</string>
-    <string name="settings_hide_bottom_bar_summary">Dotknite sa displeja pre ukrytie spodnej lišty s tlačidlami</string>
+    <string name="settings_colorize_weather_icons_summary">Nastaviť farbu ikon podľa farby textu (napr pre biele ikony počasia)</string>
+    <string name="settings_colorize_weather_icons_title">Farebné ikony</string>
     <string name="settings_miui_support_summary">Povoľte pre podporu widgetu počasia MIUI</string>
     <string name="settings_miui_support_title">MIUI widget</string>
     <string name="settings_miui_v5_summary">Povoľte ak máte MIUIv5</string>
@@ -196,8 +188,6 @@
     <string name="settings_notification_type">Typ notifikácií</string>
     <string name="settings_show_info_summary">Ukázať alebo skryť informácie</string>
     <string name="settings_show_info_title">Ukázať info</string>
-    <string name="settings_show_weather_icons_summary">Zobraziť ikony počasia (namiesto textu) v 3-dňovej predpovedi</string>
-    <string name="settings_show_weather_icons_title">Zobraziť ikonu počasia</string>
     <string name="settings_time_format_12h">12h formát času</string>
     <string name="settings_update_autoupdate_summary">Automaticky aktualizovať predpoved počasia</string>
     <string name="settings_update_autoupdate_title">Automatická aktualizácia</string>
@@ -246,6 +236,15 @@
     <string name="temperature_units_c">Celsius</string>
     <string name="temperature_units_f">Fahrenheit</string>
     <string name="text_color_title">Farba textu</string>
+    <string name="theme_author">"Autor: "</string>
+    <string name="theme_date">"Dátum: "</string>
+    <string name="theme_import_dialog_title">Vyberte tému</string>
+    <string name="theme_import_no_filemanager">Nainštalujte Správcu súborov.</string>
+    <string name="theme_import_not_theme">Neplatný súbor témy!</string>
+    <string name="theme_version">"Verzia: "</string>
+    <string name="themes_temperature_icons">Ikony teploty</string>
+    <string name="themes_weather_animation">Animácie počasia</string>
+    <string name="themes_weather_icons">Ikony počasia</string>
     <string name="updating">Aktualizovanie...</string>
     <string name="upgrade">Aktualizovať</string>
     <string name="visibility_units">Jednotka viditeľnosti</string>
@@ -301,31 +300,16 @@
     <string name="wind_w">Z</string>
     <string name="wind_wnw">Z-SZ</string>
     <string name="wind_wsw">Z-JZ</string>
-    <string name="zodiac_aries">Baran</string>
-    <string name="zodiac_taurus">Býk</string>
-    <string name="zodiac_gemini">Blíženci</string>
-    <string name="zodiac_cancer">Rak</string>
-    <string name="zodiac_leo">Lev</string>
-    <string name="zodiac_virgo">Panna</string>
-    <string name="zodiac_libra">Váhy</string>
-    <string name="zodiac_scorpio">Škorpión</string>
-    <string name="zodiac_sagittarius">Strelec</string>
-    <string name="zodiac_capricorn">Kozorožec</string>
     <string name="zodiac_aquarius">Vodnár</string>
+    <string name="zodiac_aries">Baran</string>
+    <string name="zodiac_cancer">Rak</string>
+    <string name="zodiac_capricorn">Kozorožec</string>
+    <string name="zodiac_gemini">Blíženci</string>
+    <string name="zodiac_leo">Lev</string>
+    <string name="zodiac_libra">Váhy</string>
     <string name="zodiac_pisces">Ryby</string>
-    <string name="settings_citydb_provider">Databáza miest</string>
-    <string name="applying_theme">Nastavovanie témy\u2026</string>
-    <string name="btn_apply_theme">Použiť</string>
-    <string name="menu_delete_theme">Vymazať tému</string>
-    <string name="menu_import">Importovať z SD karty</string>
-    <string name="menu_themes">Témy</string>
-    <string name="theme_author">"Autor: "</string>
-    <string name="theme_date">"Dátum: "</string>
-    <string name="theme_import_dialog_title">Vyberte tému</string>
-    <string name="theme_import_no_filemanager">Nainštalujte Správcu súborov.</string>
-    <string name="theme_import_not_theme">Neplatný súbor témy!</string>
-    <string name="theme_version">"Verzia: "</string>
-    <string name="themes_temperature_icons">Ikony teploty</string>
-    <string name="themes_weather_animation">Animácie počasia</string>
-    <string name="themes_weather_icons">Ikony počasia</string>
+    <string name="zodiac_sagittarius">Strelec</string>
+    <string name="zodiac_scorpio">Škorpión</string>
+    <string name="zodiac_taurus">Býk</string>
+    <string name="zodiac_virgo">Panna</string>
 </resources>
